edit contract template
