# src/features/auth/users/dto/stat-contracts-month.dto.ts
@@ -1,0 +1,12 @@
+import { IsInt, Min, Max } from 'class-validator';
+
+export class StatContractsMonthDto {
+  @IsInt()
+  @Min(1)
+  @Max(12)
+  month: number;
+
+  @IsInt()
+  @Min(2000)
+  year: number;
+}
